--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,55 @@
-body
+body {
   font-size: 14px;
+  line-height: 1;
+  }
+
+/* Meyer Web Code End*/
+
+ol, ul {
+	list-style: none;
 }
 
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Meyer Web Code End*/
+
 nav {
-  background color: yellow;
+  background-color: yellow;
   height: 100px;
   margin-top: -10px;
   position: fixed;
   width: 100%;
+}
 
+/* Middle section of page*/
 
 section {
   margin: 0 auto;
   width: 60%;
 }
 
-h1 {
-  font-family sans-serif;
+ h1 {
+  font-family: sans-serif;
   font-size: 2em;
 }
 
 .example, h3 {
   padding-top: 30px;
-  text-align center
+  text-align: center;
+
 }
 
 h3 {
@@ -32,5 +59,11 @@ h3 {
 .element {
   background-color: green;
   height: 100px;
-  margin 10px 0;
+  margin: 10px 0;
   width: 100%;
+}
+
+/* color change for bottom 3 divs*/
+.purple {
+  background-color: purple;
+}
